plugins {
    id 'java'
    id "io.freefair.lombok" version "8.4"
}

repositories {
    mavenCentral()
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

dependencies {
    implementation 'com.amazonaws:aws-lambda-java-core:1.2.2'
    implementation 'com.amazonaws:aws-lambda-java-events:3.11.0'
    implementation 'org.postgresql:postgresql:42.6.0'
    implementation 'com.amazonaws.secretsmanager:aws-secretsmanager-jdbc:1.0.12'

    implementation 'org.apache.logging.log4j:log4j-api:[2.21.0,)'
    implementation 'org.apache.logging.log4j:log4j-core:[2.21.0,)'
    implementation "org.apache.logging.log4j:log4j-slf4j2-impl:2.21.0"
    runtimeOnly 'com.amazonaws:aws-lambda-java-log4j2:1.5.1'

    implementation 'com.google.code.gson:gson:2.10.1'


    testImplementation(platform('org.junit:junit-bom:5.10.1'))
    testImplementation "org.junit.jupiter:junit-jupiter-api"
    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine"
    testImplementation 'org.junit.platform:junit-platform-runner:1.10.1'
}
